mengubah demo.css

--- a/assets/demo.css
+++ b/assets/demo.css
@@ -23,7 +23,7 @@ body{
 
 .menu h1{
 	margin-top:0;
-	font: normal 32px/1.5 'Open Sans', sans-serif;
+	font: normal 40px/1.5 'Open Sans', sans-serif;
 	color: #3F71AE;
 	padding-bottom: 16px;
 }
@@ -57,19 +57,6 @@ input[type=text] {
   background-color: #eee;
   border: 3px dotted rgba(0,0,0,0.1);  
   }
-			
-.button1 {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 25px 35px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    cursor: pointer;
-	width: 250px;
-}
 
 .button {
     border: none;
@@ -95,20 +82,16 @@ input[type=text] {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 12px;
     cursor: pointer;
 	margin-top: -50px;
 	margin-bottom: 100px;
     margin-right: 330px;
     margin-left: 330px;
 }
-.buttonX {width: 140px;}
-.button1{background-color: #1E90FF;}
-.button2{background-color: #DB7093;}
-.button3{background-color: #00FA9A;}
-.button4{background-color: #DA70D6;}
-.button5{background-color: #40E0D0;}
-.button6{background-color: #696969;}
+.buttonX {width: 50px;}
+.button1{background-color: #3e4750;}
+
 
 .colorgraph {
   height: 7px;
