--- a/fix/assetss/demo.css
+++ b/fix/assetss/demo.css
@@ -1,7 +1,7 @@
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:400,700');
 
 html{
-	background-color: #81E0FF;
+	background-color: #34495E;
 }
 
 body{
@@ -42,7 +42,7 @@ div.container4 {
 }
 
 input[type=text] {
-    width: 50%;
+    width: 30%;
     padding: 12px 10px;
     box-sizing: border-box;
     margin-bottom: 50px;
