--- a/fix/css/style.css
+++ b/fix/css/style.css
@@ -1,5 +1,5 @@
 	body {
-		background: #81e0ff;
+		background: #ffffff;
 		margin: 0;
 		padding: 20px;
 		font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
